
syntax="proto3";

import "search/v1/sync.proto";

package search.v1;
option go_package="search/v1;searchv1";

service SearchService {
  // 模糊搜索
  rpc Search(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string expression = 1;
  int64 uid = 2;
}

message SearchResponse {
  ArticleResult article = 2;
}

message ArticleResult {
  repeated Article articles = 1;
}